@@ -2,6 +2,7 @@ PHP 4.0 CHANGE LOG                                                    ChangeLog
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 
 ?? ?? 1999, Version 4.0 Beta 3
+- OCI8 supports appending and positioning when saving LOBs (Thies)
 - Added metaphone support (Thies)
 - OCI8 doesn't use define callbacks any longer. (Thies) 
 - OCI8 Driver now supports LOBs like PHP3. (Thies)
